--- a/dashboardv2/public/css/scss/__variable.scss
+++ b/dashboardv2/public/css/scss/__variable.scss
@@ -94,6 +94,9 @@ $color_mountain_mist_approx: #999;
 $color_suva_gray_approx: #868686;
 $tag_color: #4a90e2;
 $delete_link: #bb5838;
+$color_rcp_primary:#C53E6C;
+$color_rcp_line_color:#EBEBEB;
+
 //urls
 $url_0: url(../img/loading.gif);
 
