--- a/dashboardv2/public/css/scss/glossary.scss
+++ b/dashboardv2/public/css/scss/glossary.scss
@@ -33,7 +33,7 @@
 
     .jstree-clicked,
     .jstree-wholerow-clicked {
-        background: $color_jungle_green_approx !important;
+        background: $color_rcp_primary !important;
     }
 
     .jstree-hovered {
