--- a/dashboardv2/public/css/scss/profile-table.scss
+++ b/dashboardv2/public/css/scss/profile-table.scss
@@ -51,7 +51,7 @@ svg.dateType .nv-bar {
     margin-bottom: 0px;
 
     .progress-bar-success.cstm_success-bar {
-        background-color: $color_jungle_green_approx;
+        background-color: $color_rcp_primary;
     }
 
     .progress-bar-success.cstm_success-bar:hover {
