--- a/dashboardv2/public/js/external_lib/atlas-lineage/src/styles/graph.scss
+++ b/dashboardv2/public/js/external_lib/atlas-lineage/src/styles/graph.scss
@@ -32,7 +32,7 @@
         stroke-width: 1.5px;
 
         &.serach-rect {
-            stroke: $color_keppel_approx;
+            stroke: $color_rcp_primary;
             fill: transparent;
             stroke-width: 2.5px;
         }
