--- a/dashboardv2/public/css/scss/stats.scss
+++ b/dashboardv2/public/css/scss/stats.scss
@@ -145,7 +145,7 @@
         color: $gray;
 
         .color {
-            color: $color_jungle_green_approx;
+            color: $color_rcp_primary;
             font-weight: bold;
         }
     }
@@ -156,7 +156,7 @@
         margin-bottom: 0px;
 
         .progress-bar-success {
-            background-color: $color_jungle_green_approx;
+            background-color: $color_rcp_primary;
         }
     }
 
