--- a/dashboardv2/public/css/scss/wizard.scss
+++ b/dashboardv2/public/css/scss/wizard.scss
@@ -47,7 +47,7 @@ $color_falu_red_approx: #8a1f11;
 }
 
 %extend_5 {
-    background: $color_keppel_approx;
+    background: $color_rcp_primary;
     color: $white;
     cursor: default;
 }
@@ -148,7 +148,7 @@ $color_falu_red_approx: #8a1f11;
                         @extend %extend_5;
 
                         &:after {
-                            border-left: 30px solid $color_keppel_approx;
+                            border-left: 30px solid $color_rcp_primary;
                         }
                     }
 
@@ -222,10 +222,10 @@ $color_falu_red_approx: #8a1f11;
 
                 a {
                     padding: 10px 20px;
-                    background-color: $color_keppel_approx;
+                    background-color: $color_rcp_primary;
                     color: $white;
                     margin-bottom: 10px;
-                    border: 1px $color_keppel_approx solid;
+                    border: 1px $color_rcp_primary solid;
                     border-radius: 4px;
                     transition: all .3s ease;
                     margin: 2px;
@@ -234,9 +234,9 @@ $color_falu_red_approx: #8a1f11;
                 a[href="#cancel"] {
                     padding: 10px 20px;
                     background-color: transparent;
-                    color: $color_keppel_approx;
+                    color: $color_rcp_primary;
                     margin-bottom: 10px;
-                    border: 1px $color_keppel_approx solid;
+                    border: 1px $color_rcp_primary solid;
                     border-radius: 4px;
                     transition: all .3s ease;
                     margin: 2px;
