--- a/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<div class="col-sm-12 {{#unless isAssignView}}add-seperator{{/unless}}">
+<div class="col-sm-12 {{#unless isAssignView}}{{/unless}}">
     <div class="row">
         {{#unless isAssignView}}
         <div class="col-sm-7 no-padding" style="margin-top: 5px;">
