--- a/dashboardv2/public/js/templates/search/save/SaveSearchView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/save/SaveSearchView_tmpl.html
@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<div class="inline-content add-seperator">
+<div class="inline-content">
     <div class="clearfix">
         <span class="sm-title">Favorite Searches</span>
         <div class="pull-right">
