--- a/dashboardv2/public/js/templates/site/SideNavLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/site/SideNavLayoutView_tmpl.html
@@ -15,13 +15,13 @@
  * limitations under the License.
 -->
 <ul class="sidebar-nav">
-    <li class="sidebar-brand">
+    <!-- <li class="sidebar-brand">
         <a href="{{apiBaseUrl}}/index.html"><img src="img/atlas_logo.svg" class="logo" /></a>
-    </li>
+    </li> -->
     <ul class="tabs" style="width: 100%;" role="tablist">
-        <li role="presentation" class="tab col-sm-3"><a href="#tab-search" aria-controls="tab-search" data-name="tab-search" role="tab" data-toggle="tab" class=""><i class="fa fa-search"></i> Search</a></li>
-        <li role="presentation" class="tab col-sm-5"><a href="#tab-classification" aria-controls="tab-classification" data-name="tab-classification" role="tab" data-toggle="tab"><i class="fa fa-tags"></i> Classification</a></li>
-        <li role="presentation" class="tab col-sm-4"><a href="#tab-glossary" aria-controls="tab-glossary" data-name="tab-glossary" role="tab" data-toggle="tab"><i class="fa fa-folder-open"></i> Glossary</a></li>
+        <li role="presentation" class="tab col-sm-3"><a href="#tab-search" aria-controls="tab-search" data-name="tab-search" role="tab" data-toggle="tab" class=""> Search</a></li>
+        <li role="presentation" class="tab col-sm-5"><a href="#tab-classification" aria-controls="tab-classification" data-name="tab-classification" role="tab" data-toggle="tab"> Classification</a></li>
+        <li role="presentation" class="tab col-sm-4"><a href="#tab-glossary" aria-controls="tab-glossary" data-name="tab-glossary" role="tab" data-toggle="tab"> Glossary</a></li>
     </ul>
 </ul>
 <div class="tab-content">
