--- a/dashboardv2/public/js/templates/tag/TagLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagLayoutView_tmpl.html
@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<div class="col-sm-12 add-seperator">
+<div class="col-sm-12 ">
     <div class="row">
         <div class="col-sm-6 no-padding" style="margin-top: 5px;">
             <span class="pull-left">Flat</span>
