--- a/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
@@ -28,13 +28,13 @@
         <div class="{{#if isAssignView}}col-sm-2{{else}}col-sm-5{{/if}} no-padding-right">
             <button type="button" class="btn btn-action btn-md pull-right" title="Refresh" data-id="refreshGlossary" onclick="this.blur();" type="button"><i class="fa fa-refresh"></i></button>
             <button type="button" class="btn btn-action btn-md pull-right" data-id="createGlossary" type="button"><i class="fa fa-plus"></i></button>
-            <div class="dropdown pull-right">
+            <!-- <div class="dropdown pull-right">
                 <button type="button" data-toggle="dropdown" class="btn btn-action btn-md dropdown-toggle" type="button"><i class="fa fa-paperclip"></i></button>
                 <ul class="dropdown-menu">
                     <li><a href="{{importTmplUrl}}">Download Import template</a></li>
                     <li><a href="javascript:void(0)" data-id="importGlossary">Import Glossary Term</a></li>
                 </ul>
-            </div>
+            </div> -->
             <!--  -->
             {{/unless}}
         </div>
@@ -48,6 +48,11 @@
         <div data-id='glossaryTreeView'>
             <div class="no-padding col-sm-12 term-view">
                 <div>
+                    <label style="color: #686868;
+
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;">Search Glossary</label>
                     <input type="text" class="form-control" data-id="searchTerm" placeholder="{{#if isAssignView}}Search Term{{else}}Search Glossary, Term{{/if}}">
                 </div>
                 <div data-id="termTree" style="margin-top: 5px;padding-bottom: 25px;overflow-x: auto;overflow-y:hidden;">
