added label for category

--- a/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/GlossaryLayoutView_tmpl.html
@@ -49,7 +49,6 @@
             <div class="no-padding col-sm-12 term-view">
                 <div>
                     <label style="color: #686868;
-
                     font-size: 12px;
                     font-style: normal;
                     font-weight: 400;">Search Glossary</label>
@@ -60,6 +59,10 @@
             </div>
             <div class="col-sm-12 no-padding category-view" style="display: none;">
                 <div>
+                    <label style="color: #686868;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;">Search Glossary</label>
                     <input type="text" class="form-control" data-id="searchCategory" placeholder="{{#if isAssignView}}Search Catalog{{else}}Search Glossary, Category{{/if}}">
                 </div>
                 <div data-id="categoryTree" style="margin-top: 5px;padding-bottom: 25px;overflow-x: auto;overflow-y: hidden;">
