--- a/dashboardv2/public/css/scss/style.scss
+++ b/dashboardv2/public/css/scss/style.scss
@@ -37,3 +37,9 @@
 @import "business-metadata.scss";
 @import "stats.scss";
 @import "override.scss";
+@import "font.scss";
+
+
+body{
+    font-family: "Rakuten Sans UI";
+}
