--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -35,20 +35,24 @@
         </div>
         
         <div class="has-feedback align-left-right-icon search-box header-sec2">
-            <div class="fa fa-search form-control-feedback" style="margin-top: 2.5%;"></div>
-            <input type="text" class="form-control global-search" style="background-color: #F7F7F7;" name="global search" placeholder="Search" data-id="globalSearch" />
-            <div class="fa fa-times form-control-feedback clearable" data-id="clearGlobalSearch" style="margin-top: 2.5%;">h</div>
+            <div style="display: flex; width: 100%; align-items: center; justify-content: center;">
+                <div class="fa fa-search " style="position: absolute; left: 14%;"></div>
+                <input type="text" class="form-control global-search" style="background-color: #F7F7F7; width: 60%;" name="global search" placeholder="Search" data-id="globalSearch" />
+                <!-- <div class="fa fa-times clearable" data-id="clearGlobalSearch" style=""></div> -->
+                <a ><img style="margin-left: 20px"  src="img/squareButton.png" height="36px" width="36px"></a>
+                <a><img style="margin-left: 20px"  src="img/squareQues.png" height="36px" width="36px"></a>
+            </div>
         </div>
 
         <div class="header-sec3">
 
             <div style=" display: flex;flex:0.5; align-items: center; justify-content: flex-end;">
 
-                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/code.png" height="25px" width="25px"></a>
+                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/code.png" height="17.5px" width="17.5px"></a>
 
-                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/calender.png" height="25px" width="25px"></a>
+                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/calender.png" height="17.5px" width="17.5px"></a>
 
-                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/VerticalDots.png" height="25px" width="25px"></a>
+                <a class="show-stat" href="javascript:void(0);" title="Statistics"><img style="margin-right: 20px"  src="img/VerticalDots.png" height="17.5px" width="17.5px"></a>
 
                 <a href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="user-dropdown"><img style="margin-right: 20px"  src="img/user.png" height="40px" width="40px"></a>
             </div>
