classifiaction tab CSS changes

--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="bars-icon" style=" display: flex;flex:0.35; align-items: center; justify-content: center; margin-left: 5px;">
-                    <a href="javascript:void(0);" data-id="menuHamburger"><i class="fa fa-bars fa-lg"></i></a>
+                    <a href="javascript:void(0);" data-id="menuHamburger"><i class="fa fa-bars fa-lg" style="color: gray;"></i></a>
                 </div>
             </div>
             <div style="flex: 0.75;  display: flex;align-items: flex-start; justify-content: center; flex-direction: column; margin-left: 10px;">
