--- a/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
@@ -16,11 +16,11 @@
 -->
 <div class="form-group clearfix">
     <div class="col-sm-7">
-        <input class="form-control attributeInput" data-id="attributeInput" placeholder="Attribute name">
+        <input class="form-control attributeInput" data-id="attributeInput" placeholder="Attribute name" style="background-color: white; border: 1px black solid; color: black;">
         </input>
     </div>
     <div class="col-sm-3">
-        <select class="form-control dataTypeSelector" data-id="dataTypeSelector">
+        <select class="form-control dataTypeSelector" data-id="dataTypeSelector" style="background-color: white; border: 1px black solid; color: black;">
             <option selected="selected">string</option>
             <option>boolean</option>
             <option>byte</option>
@@ -31,7 +31,9 @@
             <option>date</option>
         </select>
     </div>
-    <div class="col-sm-2 attributePlusData" align="right">
-        <button type="button" class="btn btn-danger btn-sm closeInput" data-id="close"><i class="fa fa-times"></i></button>
+    <div class="col-sm-2 attributePlusData" align="right" style="">
+        <button type="button" class="btn btn-danger btn-sm closeInput" style="background-color: white;
+        color: gray;
+        border-color: white;" data-id="close"><i class="fa fa-times" style="    font-size: 20px;"></i></button>
     </div>
 </div>
