--- a/dashboardv2/public/css/scss/common.scss
+++ b/dashboardv2/public/css/scss/common.scss
@@ -377,3 +377,11 @@ pre {
     flex: 1;
 }
 
+.iconStyleChange{
+    color: #686868; 
+    border: 1px #686868 solid;
+    border-radius: 4px;
+    font-size: 14px;
+    background-color: transparent;
+}
+
