--- a/dashboardv2/public/js/templates/common/Modal.html
+++ b/dashboardv2/public/js/templates/common/Modal.html
@@ -26,7 +26,12 @@
                 {{/each}}
             </div>
             {{/if}}
-            <h4 class="modal-title">
+            <h4 class="modal-title" style="
+            font-family: Rakuten Sans UI;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 16px;
+            color: #333333;">
                 {{#if titleHtml}}
                 {{{tt title}}}
                 {{else}}
