--- a/dashboardv2/public/css/scss/glossary.scss
+++ b/dashboardv2/public/css/scss/glossary.scss
@@ -18,6 +18,11 @@
     z-index: 99;
 }
 
+.fa-ellipsis-v{
+    color: $color_rcp_primary;
+}
+
+
 .jstree-default-dark {
     background: transparent !important;
 
@@ -35,10 +40,11 @@
         margin: 2px 4px;
         width: 141px;
         height: 31px;
-        border: 1px solid #C53E6C;
+        border: 1px solid $color_rcp_primary;
         box-sizing: border-box;
         border-radius: 4px;
     }
+   
 
     // .jstree-clicked,
     // .jstree-wholerow-clicked {
@@ -49,6 +55,10 @@
         background: transparent !important;
  }
 
+     .jstree-wholerow-clicked:hover{
+         background: transparent !important;
+     }
+
     .jstree-clicked {
         background: $color_rcp_primary !important;
         //background: none;
@@ -58,9 +68,9 @@
         
     }
 
-    .jstree-hovered {
-        background: $color_star_dust_approx;
-    }
+    // .jstree-hovered {
+    //     background: $color_star_dust_approx;
+    // }
 
     .jstree-anchor {
        // color: #dbdbdb;
@@ -69,8 +79,10 @@
     }
     .jstree-anchor:focus {
          color: white;
- 
-     }
+        }
+        .jstree-anchor:active{
+            color: white;
+        }
 
     .jstree-search {
         color: #fbfece !important
@@ -95,3 +107,27 @@
         }
     }
 }
+//.jstree-default-dark .jstree-node, .jstree-default-dark .jstree-icon {
+    //background: url("../../img/41px.png") no-repeat !important;
+        //background-image: url(../../img/40px.png) -100px -68px no-repeat !important;
+         //list-style:none;
+         //background-position: right center;
+        //background-repeat: no-repeat;
+       // background-position: -4px -36px;
+    // }
+
+    .jstree-default-dark .jstree-hovered {
+         background: #A53159 !important;
+         color: #FFFFFF;
+
+    }
+    .jstree-default-dark .jstree-wholerow-hovered {
+        background: none !important;
+
+      }
+
+      .jstree-anchor  .jstree-clicked{
+          color: white !important;
+      }
+
+    
