--- a/dashboardv2/public/css/scss/form.scss
+++ b/dashboardv2/public/css/scss/form.scss
@@ -79,7 +79,7 @@
 
     .form-control {
         background-color: $white;
-        border: 1px $white solid;
+        border: 1px #9C9C9C solid;
     }
 }
 
