--- a/dashboardv2/public/js/templates/common/Modal.html
+++ b/dashboardv2/public/js/templates/common/Modal.html
@@ -18,7 +18,7 @@
     <div class="modal-content">
         {{#if title}}
         <div class="modal-header">
-            <a class="close">&times;</a>
+            <img src="img/closeIcon.svg" width="20px" height="20px" class="close closeIcon"></img>
             {{#if headerButtons}}
             <div class="header-button">
                 {{#each headerButtons}}
