--- a/dashboardv2/public/js/templates/search/SearchDetailLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchDetailLayoutView_tmpl.html
@@ -16,7 +16,7 @@
 -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-custom">
+        <div class="">
             <div id="r_searchResultLayoutView"></div>
         </div>
     </div>
