--- a/dashboardv2/public/js/templates/search/save/SaveSearchItemView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/save/SaveSearchItemView_tmpl.html
@@ -18,5 +18,5 @@
     <div class="tools">
         <i class="fa fa-ellipsis-h saveSearchPopover" data-original-title="" title="" data-id=""></i>
     </div>
-    <a href="javascript:void(0)">{{name}}</a>
+    <div>{{name}}</div>
 </div>
