--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -37,7 +37,7 @@
         <div class="has-feedback align-left-right-icon search-box header-sec2">
             <div class="fa fa-search form-control-feedback" style="margin-top: 2.5%;"></div>
             <input type="text" class="form-control global-search" style="background-color: #F7F7F7;" name="global search" placeholder="Search" data-id="globalSearch" />
-            <div class="fa fa-times form-control-feedback clearable" data-id="clearGlobalSearch" style="margin-top: 2.5%;">h</div>
+            <div class="fa fa-times form-control-feedback clearable" data-id="clearGlobalSearch" style="margin-top: 2.5%;"></div>
         </div>
 
         <div class="header-sec3">
