--- a/dashboardv2/public/css/bootstrap-sidebar.css
+++ b/dashboardv2/public/css/bootstrap-sidebar.css
@@ -22,7 +22,7 @@
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 350px;
     width: 0;
     height: 100%;
@@ -42,6 +42,7 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
+    padding: 16px;
 }
 
 #wrapper.toggled #page-content-wrapper {
