--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -26,7 +26,7 @@
 }
 
 .modal-header {
-    padding: 15px;
+    padding: 13px;
     border-bottom: 1px solid #DEDEDE;
 
     .header-button {
@@ -44,10 +44,31 @@
         }
     }
 }
+.closeIcon{
+    color: $black;
+    opacity: 0.8;
+    margin-top: 0;
+}
+
+.closeIcon:hover{
+    color: $black;
+    opacity: 1;
+}
+
+.moreLink{
+    margin-top: 24px;
+    padding-left: 22.5px;
+    .moreLinkText{
+        font-size: 16px;
+        font-weight: 400;
+        vertical-align: middle;
+    }
+}
 
 .modal-title {
-    font-weight: 600;
+    font-weight: 700;
     -webkit-font-smoothing: antialiased;
+    font-size: 16px;
 }
 
 .modal-footer {
@@ -166,7 +187,7 @@
 
     .select2-selection--single,
     .select2-selection--multiple {
-        min-height: 34px;
+        min-height: 36px;
 
         .select2-selection__rendered {
             padding-left: 12px;
@@ -212,6 +233,12 @@
             }
         }
     }
+}
+.searchTabRefreshBtn{
+    padding: 0;
+}
+.searchTabFilterBtn{
+    padding: 0;
 }
 
 .fixed-popover {
