--- a/dashboardv2/public/css/scss/search.scss
+++ b/dashboardv2/public/css/scss/search.scss
@@ -27,7 +27,7 @@ a:focus,a:hover {
     margin-left: 8px;
    
     vertical-align: top;
-    background-color: $color_ironside_gray_approx;
+    background-color: #90003B;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -58,8 +58,9 @@ a:focus,a:hover {
         margin: -6px 0 0 -8px;
         width: 16px;
         height: 16px;
-        background-color: $white;
+        background-color: #90003B;
         border-radius: 3px;
+        border: 3px solid $white;
         box-shadow: inset 0 1px rgba(black, .02);
         @include transition(inherit);
     }
@@ -70,16 +71,18 @@ a:focus,a:hover {
     }
 }
 
+
 .labelShowRecord {
     line-height: 40px;
 }
 
 .srchType {
     margin: 5px 0px;
-
     .srchTitle {
-        font-size: 14px;
-        color: $gray
+        font-size: 12px;
+        color: $gray;
+        margin-left: 14px;
+
     }
 }
 
@@ -339,4 +342,13 @@ hr.hr-filter {
         }
     }
 
+}
+.advanceInfoModalContentHeader{
+    font-weight: 700;
+    font-size: 12px;
+    margin-top: 10px;
+}
+.advancedInfoContentBlock{
+    font-size: 14px;
+    margin-top: 16px;
 }
