--- a/dashboardv2/public/css/scss/tag.scss
+++ b/dashboardv2/public/css/scss/tag.scss
@@ -17,199 +17,243 @@
 //tag.scss
 
 .tag-tree {
-    padding: 0; // overflow: auto;
+  padding: 0; // overflow: auto;
 
-    &.saveSearchList {
-        height: 150px;
-        overflow-y: auto;
-    }
-   
-    
-    .child>li,
-    >li {
-        list-style: none;
-        cursor: pointer;
-        
-        &.parent-node {
-            position: relative;
-            
-            
-            &.active {
-                &>div {
-                    background-color: $color_rcp_primary;
-                    border: none;
-                   
-                        color: white !important;
-                    
-                    .tools {
-                        display: block;
-                    }
+  &.saveSearchList {
+    height: 150px;
+    overflow-y: auto;
+  }
 
-                    &:hover {
-                        background-color: $color_rcp_primary;
-                    }
-                }
+  .child > li,
+  > li {
+    list-style: none;
+    cursor: pointer;
 
-                ul.child {
-                    &:after {
-                        height: 4px;
-                        top: -5px;
-                    }
-                }
-            }
+    &.parent-node {
+      position: relative;
 
-            &>div {
-                position: relative;
-                margin-top: 5px;
-                /* margin-bottom: 5px; */
-                border-radius: 4px;
+      &.active {
+        & > div {
+          background-color: $color_rcp_primary;
+          border: none;
 
-                &:hover {
-                    background-color: $color_star_dust_approx;
-                }
+          color: white !important;
 
-                >.fa.toggleArrow {
-                    position: absolute;
-                    left: 0;
-                    padding: 8px;
-                    cursor: pointer;
-                }
+          .tools {
+            display: block;
+          }
 
-                // >ul>li {
-                //     line-height: 30px;
-                //     margin-left: -20px;
-                //     text-indent: 20px;
-                //     &:hover {
-                //         background-color: $color_keppel_approx;
-                //     }
-                //     &.selected {
-                //         background-color: $color_keppel_approx;
-                //     }
-                // }
-                .tools {
-                    display: none;
-                    position: absolute;
-                    right: 0;
-                    color: $white;
-                    padding: 5px 10px;
-                }
-
-                >a,
-                >div>a {
-                    display: block;
-                    color: $color_rcp_primary ;
-                    white-space: nowrap;
-                    padding: 5px 10px;
-                    max-width: 91%;
-                    @include ellipsis();
-                    font-size: 14px;
-
-                    &:hover {
-                        color: $white ;
-                        text-decoration: none !important;
-                    }
-                }
-
-                >i+a {
-                    padding: 5px 25px;
-                }
-            }
-
-            >ul.child {
-                margin-left: 11px;
-                padding-left: 10px;
-                border-left: 1px dotted gray;
-                position: relative;
-
-                &:after {
-                    position: absolute;
-                    content: "";
-                    height: 13px;
-                    width: 11px;
-                    top: -14px;
-                    left: -1px;
-                    border-left: 1px dotted gray;
-                }
-
-                li {
-                    &.parent-node {
-                        &:after {
-                            position: absolute;
-                            content: "";
-                            height: 2px;
-                            width: 14px;
-                            top: 16px;
-                            left: -9px;
-                            border-top: 1px dotted gray;
-                        }
-
-                        &.active:after {
-                            width: 9px;
-                        }
-                    }
-                }
-            }
+          &:hover {
+            background-color: $color_rcp_primary;
+          }
         }
+
+        ul.child {
+          &:after {
+            height: 4px;
+            top: -5px;
+          }
+        }
+      }
+
+      & > div {
+        position: relative;
+        margin-top: 5px;
+        /* margin-bottom: 5px; */
+        border-radius: 4px;
+
+        &:hover {
+          background-color: $color_star_dust_approx;
+        }
+
+        > .fa.toggleArrow {
+          position: absolute;
+          left: 0;
+          padding: 8px;
+          cursor: pointer;
+        }
+
+        // >ul>li {
+        //     line-height: 30px;
+        //     margin-left: -20px;
+        //     text-indent: 20px;
+        //     &:hover {
+        //         background-color: $color_keppel_approx;
+        //     }
+        //     &.selected {
+        //         background-color: $color_keppel_approx;
+        //     }
+        // }
+        .tools {
+          display: none;
+          position: absolute;
+          right: 0;
+          color: $white;
+          padding: 5px 10px;
+        }
+
+        > a,
+        > div > a {
+          display: block;
+          // color: $color_rcp_primary;
+          white-space: nowrap;
+          padding: 5px 10px;
+          max-width: 91%;
+          @include ellipsis();
+          font-size: 14px;
+
+          &:hover {
+            color: $white;
+            text-decoration: none !important;
+          }
+        }
+
+        > i + a {
+          padding: 5px 25px;
+        }
+      }
+
+      > ul.child {
+        margin-left: 11px;
+        padding-left: 10px;
+        border-left: 1px dotted gray;
+        position: relative;
+
+        &:after {
+          position: absolute;
+          content: "";
+          height: 13px;
+          width: 11px;
+          top: -14px;
+          left: -1px;
+          border-left: 1px dotted gray;
+        }
+
+        li {
+          &.parent-node {
+            &:after {
+              position: absolute;
+              content: "";
+              height: 2px;
+              width: 14px;
+              top: 16px;
+              left: -9px;
+              border-top: 1px dotted gray;
+            }
+
+            &.active:after {
+              width: 9px;
+            }
+          }
+        }
+      }
     }
+  }
 }
 
 .input-group.attributes .form-control {
-    height: 40px;
-    box-shadow: none;
-    border-right: none;
+  height: 40px;
+  box-shadow: none;
+  border-right: none;
 }
 
 .input-group.attributes .input-group-addon {
-    background-color: $color_white_lilac_approx;
-    border: 1px $color_mystic_approx solid;
-    border-radius: 0px;
-    border-left: none;
+  background-color: $color_white_lilac_approx;
+  border: 1px $color_mystic_approx solid;
+  border-radius: 0px;
+  border-left: none;
 }
 
 .input-group.attributes .input-group-addon i.fa {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.input-group.attributes .form-control:focus+.input-group-addon {
-    border-color: $color_bali_hai_approx;
+.input-group.attributes .form-control:focus + .input-group-addon {
+  border-color: $color_bali_hai_approx;
 }
 
 .entityLink {
-    font-size: 16px;
+  font-size: 16px;
+}
+.searchResultInfoText{
+  padding-top: 32px;
+  padding-left: 27px;
+}
+.searchResultsSubText{
+  padding-top: 8px;
+}
+.searchTabButton{
+  justify-content: center;
+align-items: center;
+padding: 6px 14px;
+width: 78px;
+height: 36px;
+
+
+border: 1px solid #C53E6C;
+box-sizing: border-box;
+border-radius: 4px;
+}
+.viewPaneSearchBlock {
+  background: #f8f8f8;
+
+  .searchTypeLabel {
+    padding: 16px;
+    font-size: 24px;
+  }
+  .searchTypeSubLabel{
+      padding-bottom: 24px;
+      padding-left: 20px;
+  }
+}
+.viewPaneSearchResultsBlock {
+  background: #f8f8f8;
+  margin-top: -32px;
+  margin-left: -32px;
+  margin-bottom: 32px;
+  .searchTypeLabel {
+    padding: 16px;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  .searchTypeSubLabel{
+      padding-bottom: 24px;
+      padding-left: 20px;
+  }
 }
 
 .mainAttrTable {
-    max-height: 180px;
-    overflow: auto;
+  max-height: 180px;
+  overflow: auto;
 
-    table.attriTable {
-        width: 100%;
+  table.attriTable {
+    width: 100%;
 
-        td {
-            // &[data-type="int"],
-            // &[data-type="long"],
-            // &[data-type="float"],
-            // &[data-type="byte"],
-            // &[data-type="double"],
-            // &[data-type="short"] {
-            //     text-align: right;
-            // }
-        }
-
-        th,
-        td {
-            border: 1px solid #ddd;
-            padding: 5px 7px;
-            width: 50%;
-
-            &.renderable.html-cell {
-                min-width: 150px;
-            }
-        }
+    td {
+      // &[data-type="int"],
+      // &[data-type="long"],
+      // &[data-type="float"],
+      // &[data-type="byte"],
+      // &[data-type="double"],
+      // &[data-type="short"] {
+      //     text-align: right;
+      // }
     }
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 5px 7px;
+      width: 50%;
+
+      &.renderable.html-cell {
+        min-width: 150px;
+      }
+    }
+  }
 }
 
 .addtag-propagte-box {
-    border: 1px solid #ddd;
-    border-radius: 7px;
+  border: 1px solid #ddd;
+  border-radius: 7px;
 }
