--- a/dashboardv2/public/css/scss/theme.scss
+++ b/dashboardv2/public/css/scss/theme.scss
@@ -88,10 +88,15 @@ header.atlas-header {
     overflow: auto;
     // padding-top: 15px !important;
     padding-bottom: 10px !important;
+    background: #FFFFFF;
 
     &>div {
         height: 100%;
     }
+}
+.viewPane{
+   
+    background-color: white;
 }
 
 .full-parent-width {
@@ -203,16 +208,17 @@ header.atlas-header {
 a {
    
     cursor: pointer;
+    color: $color_rcp_primary;
 
     &:focus {
-        color: $color_puerto_rico_approx;
+        color: $color_rcp_primary;
         text-decoration: none;
         outline: none;
         cursor: pointer;
     }
 
     &:hover {
-        color: $color_puerto_rico_approx;
+        color: $color_rcp_primary;
         text-decoration: none;
         cursor: pointer;
     }
