--- a/dashboardv2/public/js/templates/search/AdvancedSearchInfo_tmpl.html
+++ b/dashboardv2/public/js/templates/search/AdvancedSearchInfo_tmpl.html
@@ -15,8 +15,8 @@
  * limitations under the License.
 -->
 <div class="">
-    <h4>Use DSL (Domain Specific Language) to build queries</h4>
-    <ul class="list-style-disc">
+    <div class="advanceInfoModalContentHeader">Use DSL (Domain Specific Language) to build queries</div>
+    <ul class="list-style-disc advancedInfoContentBlock">
         <li><b>Single Query</b>
             <p>DB where name="Reporting" select name, owner</p>
         </li>
@@ -30,7 +30,7 @@
             <p>DB where name="Reporting" select name, owner limit 10 offset 0</p>
         </li>
     </ul>
-    <h5 style="padding-left: 22.5px;">
-        <a href="http://atlas.apache.org/#/SearchAdvance" target="_blank"><i class="fa fa-info-circle" aria-hidden="true"></i> &nbsp; More sample queries and use-cases</a>
-    </h5>
+    <div class="moreLink">
+        <a href="http://atlas.apache.org/#/SearchAdvance" target="_blank"><img src="img/info.svg" height="20px" width="20px"> <span class="moreLinkText">&nbsp; More sample queries and use-cases</span></a>
+    </div>
 </div>
