--- a/dashboardv2/public/js/templates/search/save/SaveSearchView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/save/SaveSearchView_tmpl.html
@@ -24,8 +24,8 @@
     </div>
 </div>
 <span class="gray-text noFavoriteSearch">You don't have any favorite search.</span>
-<ul data-id="itemViewContent" class="tag-tree saveSearchList">
+<div data-id="itemViewContent" class="tag-tree saveSearchList">
     <div class="fontLoader-relative" style="display: block;">
         <i class="fa fa-refresh fa-spin-custom"></i>
     </div>
-</ul>
+</div>
